# einexpr

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  implementation_status.md  pyproject.toml
dev_utils/: analyse-ivy.py  analyse.py  autoimplement_array_api.py  common.py  generate_array_api.py  populate_array_api.py
docs/: transformers.md
einexpr/: __init__.py  autosizes.py  backends.py  base_typing.py  dim_calcs.py  einarray_utils.py  exceptions.py  expression.py  expression_old.py  generate_array_api.py  index.py  out_dims_calculator.py  parse_numpy_ufunc_signature.py  raw_ops.py  sizes.py  types.py  typing.py  utils.py
einexpr/array_api/: __init__.py  _types.py  array_object.py  constants.py  creation_functions.py  data_type_functions.py  data_types.py  dimension.py  einarray.py  einarray_object.py  elementwise_functions.py  lazy_einarray.py  lazy_einarray_object.py  linalg.py  linear_algebra_functions.py  manipulation_functions.py  searching_functions.py  set_functions.py  sorting_functions.py  statistical_functions.py  utility_functions.py
einexpr/backends/: __init__.py  backends.py  raw_ops.py  tracer.py
einexpr/dimension_utils/: __init__.py  dim_calcs.py  out_dims_calculator.py
einexpr/dimensions_utils/: __init__.py  out_dims_calculator.py
einexpr/other/: __init__.py  utils.py
einexpr/types/: types.py
einexpr/utils/: __init__.py  exceptions.py  utils.py
examples/: introduction.ipynb
tests/: __init__.py  test_dim_calcs.py  test_einexpr.py  test_sizes.py
