[tool.poetry]
name = "einexpr"
version = "0.3.0"
description = ""
authors = ["IsaacBreen <57783927+IsaacBreen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
lark = "^1.1.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
